--- a/templates/default/smb.conf
+++ b/templates/default/smb.conf
@@ -121,3 +121,17 @@
   writable = yes
   guest ok = yes
   path = /usr/src/tourbuzz
+
+[Tourbuzz Angular]
+  comment = Tourbuzz Angular Source
+  browseable = yes
+  writable = yes
+  guest ok = yes
+  path = /usr/src/tourbuzz-angular
+  
+[Tourbuzz Src]
+  comment = Tourbuzz Src
+  browseable = yes
+  writable = yes
+  guest ok = yes
+  path = /usr/src
